build/log/idf_py_stdout_output_26312
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\esp-idf-v5.3.3\projects\haunted_house\build\bootloader\esp-idf\esptool_py && C:\Espressif\python_env\idf5.3_py3.10_env\Scripts\python.exe C:/esp-idf-v5.3.3/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 C:/esp-idf-v5.3.3/projects/haunted_house/build/bootloader/bootloader.bin"
Bootloader binary size 0x68d0 bytes. 0x730 bytes (6%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj 
ccache C:\Espressif\tools\xtensa-esp-elf\esp-13.2.0_20240530\xtensa-esp-elf\bin\xtensa-esp32-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.3.3-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/esp-idf-v5.3.3/projects/haunted_house/build/config -IC:/esp-idf-v5.3.3/projects/haunted_house/main -IC:/esp-idf-v5.3.3/components/newlib/platform_include -IC:/esp-idf-v5.3.3/components/freertos/config/include -IC:/esp-idf-v5.3.3/components/freertos/config/include/freertos -IC:/esp-idf-v5.3.3/components/freertos/config/xtensa/include -IC:/esp-idf-v5.3.3/components/freertos/FreeRTOS-Kernel/include -IC:/esp-idf-v5.3.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/esp-idf-v5.3.3/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/esp-idf-v5.3.3/components/freertos/esp_additions/include -IC:/esp-idf-v5.3.3/components/esp_hw_support/include -IC:/esp-idf-v5.3.3/components/esp_hw_support/include/soc -IC:/esp-idf-v5.3.3/components/esp_hw_support/include/soc/esp32 -IC:/esp-idf-v5.3.3/components/esp_hw_support/dma/include -IC:/esp-idf-v5.3.3/components/esp_hw_support/ldo/include -IC:/esp-idf-v5.3.3/components/esp_hw_support/port/esp32/. -IC:/esp-idf-v5.3.3/components/esp_hw_support/port/esp32/include -IC:/esp-idf-v5.3.3/components/heap/include -IC:/esp-idf-v5.3.3/components/log/include -IC:/esp-idf-v5.3.3/components/soc/include -IC:/esp-idf-v5.3.3/components/soc/esp32 -IC:/esp-idf-v5.3.3/components/soc/esp32/include -IC:/esp-idf-v5.3.3/components/hal/platform_port/include -IC:/esp-idf-v5.3.3/components/hal/esp32/include -IC:/esp-idf-v5.3.3/components/hal/include -IC:/esp-idf-v5.3.3/components/esp_rom/include -IC:/esp-idf-v5.3.3/components/esp_rom/include/esp32 -IC:/esp-idf-v5.3.3/components/esp_rom/esp32 -IC:/esp-idf-v5.3.3/components/esp_common/include -IC:/esp-idf-v5.3.3/components/esp_system/include -IC:/esp-idf-v5.3.3/components/esp_system/port/soc -IC:/esp-idf-v5.3.3/components/esp_system/port/include/private -IC:/esp-idf-v5.3.3/components/xtensa/esp32/include -IC:/esp-idf-v5.3.3/components/xtensa/include -IC:/esp-idf-v5.3.3/components/xtensa/deprecated_include -IC:/esp-idf-v5.3.3/components/lwip/include -IC:/esp-idf-v5.3.3/components/lwip/include/apps -IC:/esp-idf-v5.3.3/components/lwip/include/apps/sntp -IC:/esp-idf-v5.3.3/components/lwip/lwip/src/include -IC:/esp-idf-v5.3.3/components/lwip/port/include -IC:/esp-idf-v5.3.3/components/lwip/port/freertos/include -IC:/esp-idf-v5.3.3/components/lwip/port/esp32xx/include -IC:/esp-idf-v5.3.3/components/lwip/port/esp32xx/include/arch -IC:/esp-idf-v5.3.3/components/lwip/port/esp32xx/include/sys -IC:/esp-idf-v5.3.3/projects/haunted_house/components/M5GFX/src -IC:/esp-idf-v5.3.3/components/nvs_flash/include -IC:/esp-idf-v5.3.3/components/spi_flash/include -IC:/esp-idf-v5.3.3/components/esp_partition/include -IC:/esp-idf-v5.3.3/components/efuse/include -IC:/esp-idf-v5.3.3/components/efuse/esp32/include -IC:/esp-idf-v5.3.3/components/driver/deprecated -IC:/esp-idf-v5.3.3/components/driver/i2c/include -IC:/esp-idf-v5.3.3/components/driver/touch_sensor/include -IC:/esp-idf-v5.3.3/components/driver/twai/include -IC:/esp-idf-v5.3.3/components/driver/touch_sensor/esp32/include -IC:/esp-idf-v5.3.3/components/esp_pm/include -IC:/esp-idf-v5.3.3/components/esp_ringbuf/include -IC:/esp-idf-v5.3.3/components/esp_driver_gpio/include -IC:/esp-idf-v5.3.3/components/esp_driver_pcnt/include -IC:/esp-idf-v5.3.3/components/esp_driver_gptimer/include -IC:/esp-idf-v5.3.3/components/esp_driver_spi/include -IC:/esp-idf-v5.3.3/components/esp_driver_mcpwm/include -IC:/esp-idf-v5.3.3/components/esp_driver_ana_cmpr/include -IC:/esp-idf-v5.3.3/components/esp_driver_i2s/include -IC:/esp-idf-v5.3.3/components/esp_driver_sdmmc/include -IC:/esp-idf-v5.3.3/components/sdmmc/include -IC:/esp-idf-v5.3.3/components/esp_driver_sdspi/include -IC:/esp-idf-v5.3.3/components/esp_driver_sdio/include -IC:/esp-idf-v5.3.3/components/esp_driver_dac/include -IC:/esp-idf-v5.3.3/components/esp_driver_rmt/include -IC:/esp-idf-v5.3.3/components/esp_driver_tsens/include -IC:/esp-idf-v5.3.3/components/esp_driver_sdm/include -IC:/esp-idf-v5.3.3/components/esp_driver_i2c/include -IC:/esp-idf-v5.3.3/components/esp_driver_uart/include -IC:/esp-idf-v5.3.3/components/vfs/include -IC:/esp-idf-v5.3.3/components/esp_driver_ledc/include -IC:/esp-idf-v5.3.3/components/esp_driver_parlio/include -IC:/esp-idf-v5.3.3/components/esp_driver_usb_serial_jtag/include -IC:/esp-idf-v5.3.3/components/esp_timer/include -IC:/esp-idf-v5.3.3/components/esp_lcd/include -IC:/esp-idf-v5.3.3/components/esp_lcd/interface -IC:/esp-idf-v5.3.3/components/esp_mm/include -IC:/esp-idf-v5.3.3/projects/haunted_house/managed_components/espressif__led_strip/include -IC:/esp-idf-v5.3.3/projects/haunted_house/managed_components/espressif__led_strip/interface -IC:/esp-idf-v5.3.3/components/esp_wifi/include -IC:/esp-idf-v5.3.3/components/esp_wifi/include/local -IC:/esp-idf-v5.3.3/components/esp_wifi/wifi_apps/include -IC:/esp-idf-v5.3.3/components/esp_wifi/wifi_apps/nan_app/include -IC:/esp-idf-v5.3.3/components/esp_event/include -IC:/esp-idf-v5.3.3/components/esp_phy/include -IC:/esp-idf-v5.3.3/components/esp_phy/esp32/include -IC:/esp-idf-v5.3.3/components/esp_netif/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -DZT_IS_HOST=1 -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=C:/esp-idf-v5.3.3/projects/haunted_house=. -fmacro-prefix-map=C:/esp-idf-v5.3.3=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj -c C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:11:5: error: 'PlayerState' does not name a type
   11 |     PlayerState myState;
      |     ^~~~~~~~~~~
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp: In function 'void app_main()':
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:44:20: error: 'myState' was not declared in this scope
   44 |         game_init(&myState);
      |                    ^~~~~~~
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:44:9: error: 'game_init' was not declared in this scope
   44 |         game_init(&myState);
      |         ^~~~~~~~~
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:79:9: error: 'give_potato' was not declared in this scope
   79 |         give_potato(&myState, fake_sender_mac);
      |         ^~~~~~~~~~~
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:84:13: error: 'game_tick' was not declared in this scope
   84 |             game_tick(&myState);
      |             ^~~~~~~~~
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:93:17: error: 'is_eliminated' was not declared in this scope
   93 |             if (is_eliminated(&myState)) {
      |                 ^~~~~~~~~~~~~
C:/esp-idf-v5.3.3/projects/haunted_house/main/main.cpp:111:17: error: 'is_eliminated' was not declared in this scope
  111 |             if (is_eliminated(&myState)) { printf("Game Over - Player Eliminated\n"); break; }
      |                 ^~~~~~~~~~~~~
[5/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/IR_test_basic.cpp.obj
ninja: build stopped: subcommand failed.
